--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
-<body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Canvas</title>
+    <script src="script.js" defer></script>
+    <link href="style.css" rel="stylesheet">
+  </head>
+  <body>
 
-<canvas class="myCanvas">
-  <p>Add suitable fallback here.</p>
-</canvas>
+  <canvas class="myCanvas">
+    <p>Unsupported by current browser.</p>
+  </canvas>
 
 
-</body>
+  </body>
 </html>
