--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
-
+  <button>Test Button</button>
   <canvas class="myCanvas">
     <p>Unsupported by current browser.</p>
   </canvas>
