--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canvas</title>
+    <title>Gamba</title>
     <script src="script.js" defer></script>
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
-  <button>Test Button</button>
   <canvas class="myCanvas">
     <p>Unsupported by current browser.</p>
   </canvas>
